# piecewise_jerk_demo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
matplot/: matplotlibcpp.h
piecewise_jerk/: linear_layer.cc  linear_layer.h  piecewise_jerk_problem.cc  piecewise_jerk_problem.h  piecewise_jerk_speed_problem.cc  piecewise_jerk_speed_problem.h
